--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">ZChat</string>
+    <string name="chat">Chat!</string>
+    <string name="find">Поиск</string>
+    <string name="messages">Сообщения</string>
 </resources>
